--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "strong_password",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://MaryMisMaria/CheckPassword",
   "dependencies": {
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
@@ -22,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +50,7 @@
     "@eslint/js": "^9.15.0",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.2",
+    "gh-pages": "^6.2.0",
     "globals": "^15.12.0"
   }
 }
